--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "url": "https://github.com/bs-community/yggdrasil-api/",
   "namespace": "Yggdrasil",
   "require": {
-    "blessing-skin-server": "^5.0.0"
+    "blessing-skin-server": "5.0.0"
   },
   "enchants": {
     "config": "Controllers\\ConfigController",
